// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Meeting Controls component matches snapshot 1`] = `
<ContextProvider
  value="my-meeting"
>
  <div
    className="wxc-meeting-controls"
  >
    <div
      className="test"
    />
  </div>
</ContextProvider>
`;

exports[`Webex Meeting Controls component matches snapshot with custom CSS class 1`] = `
<ContextProvider
  value="my-meeting"
>
  <div
    className="wxc-meeting-controls my-custom-class"
  >
    <div
      className="test"
    />
  </div>
</ContextProvider>
`;
